@@ -1,3 +1,7 @@
+2010-04-01  Nick Gasson  <nick@nickg.me.uk>
+
+	* src/display_cow.c (display_cow): Use random(3) rather than rand(3)
+
 2010-01-05  Nick Gasson  <nick@nickg.me.uk>
 
 	* xcowsay 1.2 released!
